<resources>
    <string name="app_name">Easy English Speak</string>
    <string name="app_email">www.easyenglishspeak.com</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_fname">First Name</string>
    <string name="prompt_sname">Last Name</string>
    <string name="prompt_dob">Date of Birth</string>
    <string name="prompt_mobile">Mobile Number</string>


    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_reg">Update Profile</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_fname">This First Name is invalid</string>
    <string name="error_invalid_sname">This Last Name is invalid</string>
    <string name="error_invalid_mobile">This Mobile Number is invalid</string>
    <string name="error_invalid_dob">This Date of Birth is invalid</string>
    <string name="error_invalid_credentials">This email address is invalid</string>


    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_user_home">User Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_home">Home</string>
    <string name="action_record">Speech to Text</string>
    <string name="action_profile">Profile</string>
    <string name="action_text">Text to Speech</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="label_home">Home</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="action_websearch">Web search</string>


    <string name="action_about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="profile_fragment">Hello profile fragment</string>
    <string name="speech_to_text_fragment">Hello Speech To Text fragment</string>
    <string name="text_to_speech_fragment">Hello Text To Specch fragment</string>


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello There!!</string>
    <string name="slide_1_desc">Welcome to EasyEnglishSpeak!!</string>

    <string name="slide_2_title">Text To Specch</string>
    <string name="slide_2_desc">Convert any English text into an audio file.!!</string>

    <string name="slide_3_title">Speech To Text</string>
    <string name="slide_3_desc">Converts the human voice into the written word.!!</string>

    <string name="slide_4_title">Keep Scrolling</string>
    <string name="slide_4_desc">Something Bigger is on the way.. Keep Supporting us..!!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
