<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/action_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/action_profile" />
        <item
            android:id="@+id/nav_record"
            android:icon="@drawable/ic_record"
            android:title="@string/action_record" />
        <item
            android:id="@+id/nav_text"
            android:icon="@drawable/ic_keyboard"
            android:title="@string/action_text" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/action_about" />
        <item android:title="">
            <menu>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/action_logout" />
            </menu>
        </item>
    </group>
</menu>
